@@ -63,6 +63,7 @@ bc-empty-header=
 bc-message-header=__1__: 
 bc-shout-header=__1__ (shout): 
 bc-team-header=__1__ (team): 
+bc-command-ran=__1__ (command): 
 bc-whisper-to-header=You to __1__: 
 bc-whisper-from-header=__1__ to You: 
 bc-global-history-changed=Global chat history limited to __1__
